--- a/README.org
+++ b/README.org
@@ -119,16 +119,16 @@ To test the accuracy of the features extracted from the data and saved in "featu
 
 **** Features
 List of all features used (in order):
-* acc_mean
-* avg_con_bt
-* gyro_mean
-* max_speed
-* avg_speed
-* distance_travelled
-* mag_mean
-* acc_mixed_0
-* ...
-* acc_mixed_29
-* gyro_mixed_0
-* ...
-* gyro_mixed_29
++ acc_mean
++ avg_con_bt
++ gyro_mean
++ max_speed
++ avg_speed
++ distance_travelled
++ mag_mean
++ acc_mixed_0
++ ...
++ acc_mixed_29
++ gyro_mixed_0
++ ...
++ gyro_mixed_29
