--- a/README.org
+++ b/README.org
@@ -119,14 +119,14 @@ To test the accuracy of the features extracted from the data and saved in "featu
 
 **** Features
 List of all features used (in order):
-+ acc_mean
-+ avg_con_bt
-+ gyro_mean
++ acc_mean (mean of the accelerator's magnitude over all axis)
++ avg_con_bt (average of connected bluetooth devices over all scans that were done within this window)
++ gyro_mean (see acc_mean)
 + max_speed
 + avg_speed
 + distance_travelled
-+ mag_mean
-+ acc_mixed_0
++ mag_mean (see acc_mean)
++ acc_mixed_0 (fft magic, there's 10 features per axis, so 30 features total per sensor)
 + ...
 + acc_mixed_29
 + gyro_mixed_0
