--- a/android-app/app/src/main/res/values/strings.xml
+++ b/android-app/app/src/main/res/values/strings.xml
@@ -32,4 +32,5 @@
     <string name="empty_trip">Trip was empty!</string>
     <string name="home_distance_travelled">0</string>
     <string name="home_emissions">0</string>
+    <string name="completed_journey">Completed Journey</string>
 </resources>
