--- a/android-app/app/src/main/res/values/strings.xml
+++ b/android-app/app/src/main/res/values/strings.xml
@@ -33,4 +33,5 @@
     <string name="home_distance_travelled">0</string>
     <string name="home_emissions">0</string>
     <string name="completed_journey">Completed Journey</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
