--- a/android-app/app/src/main/res/values/strings.xml
+++ b/android-app/app/src/main/res/values/strings.xml
@@ -43,4 +43,5 @@
     <string name="transition_trip_info_duration_value">transition_trip_info_duration_value</string>
     <string name="transition_trip_info_duration_label">transition_trip_info_duration_label</string>
     <string name="ongoing_trip">Ongoing Trip</string>
+    <string name="empty_list">No trips yet.</string>
 </resources>
