--- a/android-app/app/src/main/res/values/strings.xml
+++ b/android-app/app/src/main/res/values/strings.xml
@@ -13,8 +13,8 @@
 
     <string name="notification_service_text">Gathering Sensor Data…</string>
     <string name="locations_required_title">Locations required</string>
-    <string name="locations_required_goodbye">You didn\'t accept the location request. Without locations, the application cannot work as intended. Goodbye!</string>
-    <string name="locations_required_text">Without location, the app cannot work as intended. Please accept the location request.</string>
+    <string name="locations_required_goodbye">You didn\'t accept the location request. Unfortunately without locations, the application cannot work as intended. Goodbye!</string>
+    <string name="locations_required_text">Without location access, the app cannot work as intended. Please accept the location request.</string>
     <string name="okay">Okay</string>
     <string name="start_scanning">Start Trip</string>
     <string name="stop_scanning">Stop Trip</string>
@@ -62,7 +62,7 @@
     </string>
     <string name="onboarding_3_title">Save the Polar Bears!</string>
     <string name="onboarding_3_subtitle">
-        Stay under the carbon budget of allocated by the Paris Agreement to help reduce the worldwide carbon emissions.
+        Stay under the carbon budget defined by the UN to help reduce the worldwide carbon emissions.
     </string>
     <string name="emissions_budget_format">%.0fg/%.0fg</string>
     <string name="statistics_one_month_label">1 Month</string>
