--- a/android-app/app/src/main/res/values/strings.xml
+++ b/android-app/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Smart Energy</string>
+    <string name="app_name">CO2 Mobility Calculator</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">@string/app_name</string>
@@ -11,7 +11,7 @@
     <string name="menu_history">History</string>
     <string name="menu_statistics">Statistics</string>
 
-    <string name="notification_service_text">Watching your every move</string>
+    <string name="notification_service_text">Watching your every move...</string>
     <string name="locations_required_title">Locations required</string>
     <string name="locations_required_goodbye">You didn\'t accept the location request. Unfortunately without locations, the application cannot work as intended. Goodbye!</string>
     <string name="locations_required_text">Without location access, the app cannot work as intended. Please accept the location request.</string>
